# reproduce-gpt2

./: .gitignore  .pre-commit-config.yml  Makefile  fineweb.py  hellaswag.py  model.py  play.ipynb  pyproject.toml  test.ipynb  train_gpt2.py
