[project]
name = "reproduce-gpt2"
version = "0.1.0"
description = "A project to reproduce GPT-2 experiments including HellaSwag evaluation"
requires-python = ">=3.11"

dependencies = [
    "torch>=2.0.0", 
    "transformers>=4.0.4",
    "tiktoken>=0.5.0", 
    "tqdm>=4.65.0", 
    "requests>=2.31.0",
    "numpy>=1.24.0,<2.0.0",
    "datasets>=2.0.0",
    "matplotlib>=3.7.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.3.0",
    "mypy>=1.9.0",
    "pre-commit>=3.6.0",
    "types-tqdm",
]

[build-syatem]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
select = [
 # pycodestyle
 "E",
 # Pyflakes
 "F",
 # pyupgrade
 "UP",
 # flake8-bugbear
 "B",
 # flake8-simplify
 "SIM",
 # isort
 "I",
]
ignore = []
line-length = 120
fixable = ["ALL"]                # Allow automatic fixes for all fixable issues

[tool.ruff.lint.isort]
force-single-line = true         # One import per line

[tool.mypy]
ignore_missing_imports = false   # Display error for all missing imports
strict = true                    # Enable more checks